project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_details__tests__frodo.snap
---
source: contacts/mail-contacts-common/src/contact_details.rs
expression: get_vcard(frodo)
---
VCARD:
BEGIN:VCARD
VERSION:4.0
FN;PREF=1:Frodo Beutlin
ITEM1.EMAIL;PREF=1:frodo@pm.me
LANG:Common
LANG:co-HO
N:Beutlin;Frodo;;;
ADR;PREF=1:;Bag End;;Hobbiton;The Shire;;Middle earth
TZ:SMT
PHOTO;PREF=1:https://static.wikia.nocookie.net/lotr/images/3/32/Frodo_%28FotR%29.png/revision/latest?cb=20221006065757
LOGO;PREF=1:https://hipfonts.com/wp-content/uploads/2021/01/The-Lord-of-the-Rings-Logo.jpg
LOGO;PREF=69:data:bad
END:VCARD

---------------------------

Sorted fields:
Emails([ContactDetailsEmail { email_type: [], email: fXXXX@XXXXX, groups: [] }])
Address([ContactDetailAddress { street: Some(""), city: Some("Hobbiton"), region: Some("The Shire"), postal_code: Some(""), country: Some("Middle earth"), addr_type: [] }])
Languages(["Common", "co-HO"])
TimeZones(["SMT"])
Logos([Url { scheme: "https", cannot_be_a_base: false, username: "", password: None, host: Some(Domain("hipfonts.com")), port: None, path: "/wp-content/uploads/2021/01/The-Lord-of-the-Rings-Logo.jpg", query: None, fragment: None }, Url { scheme: "data", cannot_be_a_base: true, username: "", password: None, host: None, port: None, path: "bad", query: None, fragment: None }])
Photos([Url { scheme: "https", cannot_be_a_base: false, username: "", password: None, host: Some(Domain("static.wikia.nocookie.net")), port: None, path: "/lotr/images/3/32/Frodo_%28FotR%29.png/revision/latest", query: Some("cb=20221006065757"), fragment: None }])
