project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_details__tests__get_from_contact_basic_2_emails.snap
---
source: contacts/mail-contacts-common/src/contact_details.rs
expression: "&details"
---
InspectableContactDetails {
    id: LocalContactId(
        1,
    ),
    remote_id: Some(
        ContactId(
            "42",
        ),
    ),
    avatar_information: AvatarInformation {
        text: "P",
        color: "#52CD96",
    },
    extended_name: ExtendedName {
        last: None,
        first: Some(
            "Peter Parker",
        ),
        additional: None,
        prefix: None,
        suffix: None,
    },
    fields: [
        Emails(
            [
                ContactDetailsEmail {
                    email_type: [],
                    email: pXXXX@XXXXX,
                },
                ContactDetailsEmail {
                    email_type: [],
                    email: pXXXX@XXXXXXXX,
                },
            ],
        ),
    ],
}
