project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_details__tests__real_autosave.snap
---
source: contacts/mail-contacts-common/src/contact_details.rs
expression: get_vcard(real_autosave)
---
VCARD:
BEGIN:VCARD
VERSION:4.0
PRODID;VALUE=TEXT:-//ProtonMail//ProtonMail vCard 1.0.0//EN
FN;PREF=1:Orión
UID:proton-autosave-036bcd9a-0818-45b0-b54c-2238891dc39d
ITEM1.EMAIL;PREF=1:oriongonza42@pm.me
ITEM2.EMAIL;TYPE=work;PREF=2:orion.gonzalez@external.proton.ch
ITEM3.EMAIL;TYPE=other;PREF=3:oriongonza@gmail.com
END:VCARD
---------------------------

Sorted fields:
Emails([ContactDetailsEmail { email_type: [], email: oXXXXXXXXXXX@XXXXX, groups: [] }, ContactDetailsEmail { email_type: [Work], email: oXXXXXXXXXXXXX@XXXXXXXXXXXXXXXXXX, groups: [] }, ContactDetailsEmail { email_type: [String("other")], email: oXXXXXXXXX@XXXXXXXXX, groups: [] }])
