project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_details__tests__vcard_v3.snap
---
source: contacts/mail-contacts-common/src/contact_details.rs
expression: get_vcard(v3)
---
VCARD:
BEGIN:VCARD
VERSION:3.0
PRODID:-//Apple Inc.//macOS 11.0.1//EN
N:Doe Winners;John Timothy;;Sir;
FN:Sir John Timothy Doe Winners
NICKNAME:JJ
X-MAIDENNAME:Riesling
X-PHONETIC-FIRST-NAME:Johny
ORG:DoughCompany;
TITLE:Consultant
EMAIL;type=INTERNET;type=pref:John@doe.com
EMAIL;type=INTERNET;type=HOME:home@home.com
EMAIL;type=INTERNET;type=WORK:work@work.com
EMAIL;type=INTERNET;type=HOME:home@home.com
EMAIL;type=INTERNET;type=WORK:work@work.com
TEL;type=pref:123456789
TEL;type=CELL;type=VOICE:334346745
TEL;type=IPHONE;type=CELL;type=VOICE:23234234234
TEL;type=HOME;type=VOICE:234234
TEL;type=WORK;type=VOICE:2342
TEL;type=MAIN:25563
TEL;type=CELL;type=VOICE:334346745
TEL;type=IPHONE;type=CELL;type=VOICE:23234234234
TEL;type=HOME;type=VOICE:234234
TEL;type=WORK;type=VOICE:2342
TEL;type=MAIN:25563
ADR;type=HOME;type=pref:;;First st;Berlin;;44356;Germany
ADR;type=WORK:;;Route de la Galaise;Geneva;;1111;Switzerland
ADR;type=HOME:;;First st;Berlin;;44356;Germany
ADR;type=WORK:;;Route de la Galaise;Geneva;;1111;Switzerland
NOTE:Frog frog frog
item1.URL;type=pref:frog.com
item1.X-ABLabel:_$!<HomePage>!$_
URL;type=HOME:test.com
item2.URL:frog.com
item2.X-ABLabel:_$!<HomePage>!$_
URL;type=HOME:test.com
BDAY:1970-05-05
X-JABBER;type=WORK;type=pref:john98
X-JABBER;type=WORK:john98
IMPP;X-SERVICE-TYPE=Facebook;type=HOME;type=pref:xmpp:johnyyyy
IMPP;X-SERVICE-TYPE=Jabber;type=WORK:xmpp:john98
IMPP;X-SERVICE-TYPE=Facebook;type=HOME:xmpp:johnyyyy
IMPP;X-SERVICE-TYPE=Jabber;type=WORK:xmpp:john98
END:VCARD

---------------------------

Sorted fields:
Emails([ContactDetailsEmail { email_type: [Home], email: hXXX@XXXXXXXX, groups: [] }, ContactDetailsEmail { email_type: [Home], email: hXXX@XXXXXXXX, groups: [] }, ContactDetailsEmail { email_type: [Work], email: wXXX@XXXXXXXX, groups: [] }, ContactDetailsEmail { email_type: [Work], email: wXXX@XXXXXXXX, groups: [] }, ContactDetailsEmail { email_type: [String("pref")], email: JXXX@XXXXXXX, groups: [] }])
Phones([Telephone { number: "123456789", tel_types: [String("pref")] }, Telephone { number: "23234234234", tel_types: [Voice] }, Telephone { number: "23234234234", tel_types: [Voice] }, Telephone { number: "2342", tel_types: [Voice] }, Telephone { number: "2342", tel_types: [Voice] }, Telephone { number: "234234", tel_types: [Voice] }, Telephone { number: "234234", tel_types: [Voice] }, Telephone { number: "25563", tel_types: [String("MAIN")] }, Telephone { number: "25563", tel_types: [String("MAIN")] }, Telephone { number: "334346745", tel_types: [Voice] }, Telephone { number: "334346745", tel_types: [Voice] }])
Address([ContactDetailAddress { street: Some("First st"), city: Some("Berlin"), region: Some(""), postal_code: Some("44356"), country: Some("Germany"), addr_type: [Home] }, ContactDetailAddress { street: Some("First st"), city: Some("Berlin"), region: Some(""), postal_code: Some("44356"), country: Some("Germany"), addr_type: [String("pref")] }, ContactDetailAddress { street: Some("Route de la Galaise"), city: Some("Geneva"), region: Some(""), postal_code: Some("1111"), country: Some("Switzerland"), addr_type: [Work] }, ContactDetailAddress { street: Some("Route de la Galaise"), city: Some("Geneva"), region: Some(""), postal_code: Some("1111"), country: Some("Switzerland"), addr_type: [Work] }])
Birthday(Text("1970-05-05"))
Notes(["Frog frog frog"])
Titles(["Consultant"])
Organizations(["DoughCompany, "])
Urls([VCardUrl { url: Text("frog.com"), url_type: [] }, VCardUrl { url: Text("frog.com"), url_type: [String("pref")] }, VCardUrl { url: Text("test.com"), url_type: [Home] }, VCardUrl { url: Text("test.com"), url_type: [Home] }])
